tests/semantic/invalid/while_condition.mc
float value = 1.0;
while (value) {
    print value;
}
